tests/baselines/reference/symbolProperty44.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty44.ts(2,9): error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty44.ts(2,9): error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty44.ts(5,9): error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty44.ts(5,9): error TS2718: Duplicate declaration '[Symbol.hasInstance]'.


==== tests/cases/conformance/es6/Symbols/symbolProperty44.ts (4 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
            return "";
        }
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
            return "";
        }
    }